--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@
 #root {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: column;
 }
 
@@ -45,5 +46,31 @@
     font-size: 100%;
     color: #080808;
     margin-top: 5%;
+
+}
+
+.singUpDiv{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column; 
+
+}
+
+
+.imgContainerSignUp{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 5%;
+    max-width: 90%;
+    max-height: 90%; 
+}
+
+.imageSignUp{
+    margin-top: 5%;
+    max-width: 90%;
+    max-height: 90%; 
+
 
 }
