--- a/src/style.css
+++ b/src/style.css
@@ -240,7 +240,7 @@ h3 {
   width: 160px;
   height: 49px;
   border-radius: 10px;
-  margin-top: 35px;
+  margin-top: 20px;
   font-family: IBMPlexSans-Medium;
   font-size: 19px;
   color: #fffafa;
@@ -291,5 +291,6 @@ h3 {
   font-family: IBMPlexSans-Medium;
   color:red;
   font-size: 14px;
+  font-weight: bolder;
   
 }
