--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  
   box-sizing: border-box;
   color: black;
 }
@@ -293,4 +293,89 @@ h3 {
   font-size: 14px;
   font-weight: bolder;
   
+}
+
+/*  WALL  */
+
+.wallDiv{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+}
+
+.wallHeader{
+  background-color: #ce7f46;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 30px;
+  width: 100%;
+  height: 70px;
+  
+
+}
+
+.imageLogoHeader{
+  display: flex;
+  
+  height: 90px;
+  width: 133px;
+ 
+}
+
+.signOutButton{
+  margin-top: 5px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  cursor:pointer;
+  right: 3px;
+  height: 30px;
+  
+  /*font-family: IBMPlexSans-Medium;
+  font-weight: bold;
+  font-size: 12px;*/
+  
+  
+}
+
+.imageClose{
+  display:flex;
+  position:absolute;
+  margin:2px;
+  right: 15px;
+  height: 25px;
+  
+  
+}
+
+
+
+.divPost{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 200px;
+  width: 360px;
+  background-color: #6fb94c;
+  margin-top: 50px;
+  padding:20px;
+
+  
+ 
+}
+
+.textArea{
+  resize: none;
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  
+ border-radius: 12px; 
+
 }
