--- a/src/style.css
+++ b/src/style.css
@@ -357,16 +357,13 @@ h3 {
 .divPost{
   display:flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
-  height: 200px;
+  height: 250px;
   width: 360px;
-  background-color: #6fb94c;
+  background-color: rgba(247, 240, 240, 39% );
+  border: 1px solid rgba(116, 112, 112, 100% );
   margin-top: 50px;
-  padding:20px;
-
-  
- 
+  border-radius: 10px;
 }
 
 .textArea{
@@ -375,7 +372,17 @@ h3 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  border-radius: 12px; 
+  margin-top: 15px;
   
- border-radius: 12px; 
+}
 
+.divPostUserData{
+  display:flex;
+  background-color: rgba(111, 185, 76, 71% );
+  width: 358px;
+  height: 70px;
+  border-radius: 0px 12px 0px 0px 12px; 
+  margin:0px;
+  
 }
