--- a/src/style.css
+++ b/src/style.css
@@ -358,12 +358,14 @@ h3 {
   display:flex;
   align-items: center;
   flex-direction: column;
-  height: 250px;
+  position:relative;
+  height: 220px;
   width: 360px;
   background-color: rgba(247, 240, 240, 39% );
   border: 1px solid rgba(116, 112, 112, 100% );
-  margin-top: 50px;
+  margin-top: 35px;
   border-radius: 10px;
+  
 }
 
 .textArea{
@@ -372,17 +374,38 @@ h3 {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  border-radius: 12px; 
-  margin-top: 15px;
+  border-radius: 10px; 
+  margin-top: 11px;
+  
   
 }
 
 .divPostUserData{
   display:flex;
+  flex-direction: column;
   background-color: rgba(111, 185, 76, 71% );
-  width: 358px;
-  height: 70px;
-  border-radius: 0px 12px 0px 0px 12px; 
+  width: 100%;
+  height: 55px;
+  border-radius: 9px 9px 0px 0px;
   margin:0px;
   
 }
+
+.postButton{
+  display:flex;
+  position:absolute;
+  align-items: center;
+  justify-content: center;
+  margin-top: 183px;
+  left: 276px;
+  height: 26px;
+  width: 63px; 
+  border-radius: 5px;
+  border-style:none;
+  background-color: #ce7f46;
+  font-family: IBMPlexSans-Medium;
+  font-size: 13px;
+  color: #fffafa;
+  font-weight: lighter;
+}
+  
