--- a/src/style.css
+++ b/src/style.css
@@ -104,7 +104,7 @@ h1 {
 
 .loginButton {
   cursor: pointer;
-  background: #6fb94c;
+  background-color: rgb(111, 216, 97);
   border: none;
   width: 175px;
   height: 49px;
@@ -235,7 +235,7 @@ h3 {
 
 .registerButton {
   cursor: pointer;
-  background: #6fb94c;
+  background-color: rgb(111, 216, 97);
   border: none;
   width: 160px;
   height: 49px;
@@ -387,7 +387,7 @@ h3 {
   
   display:flex;
   flex-direction: column;
-  background-color: rgba(111, 185, 76, 71% );
+  background-color: rgb(111, 216, 97);
   width: 100%;
   height: 55px;
   border-radius: 9px 9px 0px 0px;
@@ -448,6 +448,11 @@ height: 100px;
   
   
   
+}
+
+.photoUserAuth{
+  width: 49px;
+  height: 40px;
 }
 
 .deletePostButton {
