--- a/src/style.css
+++ b/src/style.css
@@ -389,7 +389,7 @@ h3 {
   flex-direction: column;
   background-color: rgb(111, 216, 97);
   width: 100%;
-  height: 55px;
+  height: 65px;
   border-radius: 9px 9px 0px 0px;
   margin:0px;
   
@@ -420,7 +420,7 @@ h3 {
   align-items: center;
   flex-direction: column;
   position:relative;
-  height: 215px;
+  height: 150px;
   width: 360px;
  
   border: 1px solid rgba(116, 112, 112, 100% );
@@ -433,11 +433,11 @@ h3 {
 padding: 5px;
 justify-content:left;
 flex-direction: column;
-border-radius: 10px; 
-margin-top: 11px;
-border: 1px solid rgba(116, 112, 112, 100% );
-width: 330px;
-height: 100px;
+margin-top: 5px;
+width: 360px;
+height: 80px;
+
+padding: 10px;
 
 }
 
@@ -448,8 +448,9 @@ height: 100px;
   justify-content: center;
   right: 84%;
   width: 49px;
-  height: 45px;
-  border-radius: 8%;
+  height: 50px;
+  border-radius: 50%;
+  left: 15px;
  
 
 }
@@ -459,13 +460,24 @@ height: 100px;
 .emailUser{
   display: flex;
   position: absolute;
-  right: 5%;
+  left: 75px;
   font-family: IBMPlexSans-Medium;
   font-size:medium;
   font-weight: bolder;
 
   
   
+  
+}
+
+.nameUserAuthGmail{
+  display: flex;
+  position: absolute;
+  left: 75px;
+  font-family: IBMPlexSans-Medium;
+  font-size:medium;
+  font-weight: bolder;
+
   
 }
 
@@ -476,9 +488,10 @@ height: 100px;
   align-items: center;
   justify-content: center;
   right: 84%;
-  width: 49px;
-  height: 45px;
-  border-radius: 8%;
+  width: 48px;
+  height: 48px;
+  border-radius: 50%;
+  left: 15px;
   
  
 
@@ -493,16 +506,16 @@ height: 100px;
     position:absolute;
     align-items: center;
     justify-content: center;
-    margin-top: 320px;
-    left: 280px;
-    height: 26px;
-    width: 63px; 
+    margin-top: 0px;
+    left: 318px;
+    height: 27px;
+    width: 27px; 
     border-radius: 5px;
     border-style:none;
     font-family: IBMPlexSans-Medium;
     font-size: 13px;
-    color: #fffafa;
+    
+    
     font-weight: lighter;
-    background-color: #ce7f46;
-    box-shadow:transparent;
+    
   }
