--- a/src/style.css
+++ b/src/style.css
@@ -361,13 +361,13 @@ h3 {
   align-items: center;
   flex-direction: column;
   position:relative;
-  height: 180px;
+  height: 210px;
   width: 360px;
   background-color: rgba(247, 240, 240, 39% );
   border: 1px solid rgba(116, 112, 112, 100% );
   margin-top: 16px;
   border-radius: 10px;
-  padding:10px;
+  padding:0px 0px 40px 0px ;
   
 }
 
@@ -376,14 +376,14 @@ h3 {
   display:flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   border-radius: 10px; 
   margin-top: 2%;
   font-weight: bolder;
   font-family: IBMPlexSans-Medium;
-  height: 75%;
-  width: 100%;
+  height: 90%;
+  width: 95%;
   font-size: 100%;
+  padding:0px 0px 10px 10px;
   
  
 }
@@ -407,8 +407,8 @@ h3 {
   position:absolute;
   align-items: center;
   justify-content: center;
-  margin-top: 37%;
-  left: 276px;
+  margin-top: 49%;
+  left: 280px;
   height: 26px;
   width: 63px; 
   border-radius: 5px;
@@ -600,61 +600,59 @@ padding: 10px;
   font-weight: bold;
 }
 
-.imageProfileUser{
+.divProfile{
   display:flex;
-  margin-top: 10px;
-  width: 350px;
+  align-items: center;
   justify-content: center;
-  border-radius: 50px;
+  background-color: #ce7f46be;
+  width: 100%;
+  height: 90px;
+  border-radius: 9px 9px 0px 0px;
+  
+}
+
+.imageProfileUser{
+   position:absolute;
+  margin-top: 2px;
+  left: 37%;
+  right: 84%;
+  width: 48px;
+  height: 48px;
+  border-radius: 20%;
+  left: 15px;
  
 }
 
 .imageUserLoginHeader{
-  
   position:absolute;
-  margin-top: 154px;
-  width: 21%;
-  border-radius: 40px; 
+  margin-top: 2px;
   left: 37%;
+  right: 84%;
+  width: 48px;
+  height: 48px;
+  border-radius: 20%;
+  left: 15px;
 }
 
 .nameUserLoginHeader{
-  align-content: center;
+  display: flex;
   position: absolute;
-  align-items: center;
-  justify-content: center;
-  margin-top: 250px;
+  left: 75px;
   font-family: IBMPlexSans-Medium;
-  font-size: 12px;
-  font-weight: bold;
-  left:43%;
-  right: 35%;
-  line-height: 1.5;
+  font-size:medium;
+  font-weight: bolder;
+
   
 }
 
 .emailUserLoginHeaderRegister{
   
-  position:absolute;
-  text-align: center;
-  margin-top: 250px;
+  display: flex;
+  position: absolute;
+  left: 75px;
   font-family: IBMPlexSans-Medium;
-  font-size: 12px;
-  font-weight: bold;
-  left:27%;
-  right: 35%;
+  font-size:medium;
+  font-weight: bolder;
   
 }
 
-.overlay-image{
-  position: absolute; /* Coloca la imagen en una posición absoluta en relación con el contenedor */
-  top: 0; /* Ajusta la posición superior según tus necesidades */
-  z-index: 1;
-}
-
-.overlay-image2{
-  position: absolute; /* Coloca la imagen en una posición absoluta en relación con el contenedor */
-  top: 0; /* Ajusta la posición superior según tus necesidades */
-  z-index: 2;
-
-}
