--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  
+
   box-sizing: border-box;
   color: black;
 }
@@ -273,31 +273,27 @@ h3 {
   color: #ce7f46;
 }
 
-
-.ErrorRegisterLogin{
-
+.ErrorRegisterLogin {
   display: flex;
   align-items: center;
   justify-content: center;
-  color:black;
+  color: black;
   margin-top: 25px;
-
 }
 
-.textErrorRegisterLogin{
-  display:flex;
+.textErrorRegisterLogin {
+  display: flex;
   align-items: center;
   justify-content: center;
   font-family: IBMPlexSans-Medium;
-  color:red;
+  color: red;
   font-size: 14px;
   font-weight: bolder;
-  
 }
 
 /*  WALL  */
 
-.wallDiv{
+.wallDiv {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -305,10 +301,10 @@ h3 {
   justify-content: center;
   height: 100%;
   width: 100%;
-  box-shadow:transparent;
+  box-shadow: transparent;
 }
 
-.wallHeader{
+.wallHeader {
   background-color: #ce7f46;
   display: flex;
   align-items: center;
@@ -316,146 +312,126 @@ h3 {
   right: 30px;
   width: 100%;
   height: 70px;
-  
-
 }
 
-.imageLogoHeader{
+.imageLogoHeader {
   display: flex;
-  
+
   height: 90px;
   width: 133px;
- 
 }
 
-.signOutButton{
+.signOutButton {
   margin-top: 5px;
   display: flex;
   align-items: center;
   position: absolute;
-  cursor:pointer;
+  cursor: pointer;
   right: 1%;
   height: 30px;
-  
-  
+
   /*font-family: IBMPlexSans-Medium;
   font-weight: bold;
   font-size: 12px;*/
-  
-  
 }
 
-.imageClose{
-  display:flex;
-  position:absolute;
-  margin:2px;
+.imageClose {
+  display: flex;
+  position: absolute;
+  margin: 2px;
   right: 15px;
   height: 25px;
-  
-  
 }
 
-
-
-.divPost{
-  display:flex;
+.divPost {
+  display: flex;
   align-items: center;
   flex-direction: column;
-  position:relative;
+  position: relative;
   height: 210px;
   width: 360px;
-  background-color: rgba(247, 240, 240, 39% );
-  border: 1px solid rgba(116, 112, 112, 100% );
+  background-color: rgba(247, 240, 240, 39%);
+  border: 1px solid rgba(116, 112, 112, 100%);
   margin-top: 16px;
   border-radius: 10px;
-  padding:0px 0px 40px 0px ;
-  
+  padding: 0px 0px 40px 0px;
 }
 
-.textArea{
+.textArea {
   resize: none;
-  display:flex;
+  display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 8px; 
+  border-radius: 8px;
   margin-top: 2%;
   font-weight: bolder;
   font-family: IBMPlexSans-Medium;
   height: 90%;
   width: 94%;
   font-size: 100%;
-  padding:5px 5px 5px 5px;
-  
- 
+  padding: 5px 5px 5px 5px;
 }
 
-.divPostUserData{
+.divPostUserData {
   align-items: center;
   justify-content: center;
-  display:flex;
+  display: flex;
   flex-direction: column;
   background-color: rgb(111, 216, 97);
   width: 100%;
   height: 65px;
   border-radius: 9px 9px 0px 0px;
-  margin:0px;
-  
+  margin: 0px;
 }
 
-.postButton{
-  cursor:pointer;
-  display:flex;
-  position:absolute;
+.postButton {
+  cursor: pointer;
+  display: flex;
+  position: absolute;
   align-items: center;
   justify-content: center;
   margin-top: 49%;
   left: 280px;
   height: 26px;
-  width: 63px; 
+  width: 63px;
   border-radius: 5px;
-  border-style:none;
+  border-style: none;
   background-color: #ce7f46;
   font-family: IBMPlexSans-Medium;
   font-size: 13px;
   color: #fffafa;
   font-weight: lighter;
 }
-  
-.divPostUsers{
- 
-  display:flex;
+
+.divPostUsers {
+  display: flex;
   align-items: center;
   flex-direction: column;
-  position:relative;
+  position: relative;
   height: 150px;
   width: 360px;
- 
-  border: 1px solid rgba(116, 112, 112, 100% );
+  border: 1px solid rgba(116, 112, 112, 100%);
   margin-top: 30px;
   border-radius: 10px;
-  
 }
-.contenPost{
-  display:flex;
-padding: 5px;
-justify-content:left;
-flex-direction: column;
-margin-top: 5px;
-width: 360px;
-height: 80px;
-
-padding: 10px;
-
+.contenPost {
+  display: flex;
+  padding: 5px;
+  justify-content: left;
+  flex-direction: column;
+  margin-top: 5px;
+  width: 360px;
+  height: 80px;
+  padding: 10px;
 }
 
-.editPost{
+.editPost {
   width: 100%;
-
 }
 
-.photoUserAuth{
-  display:flex;
-  position:absolute;
+.photoUserAuth {
+  display: flex;
+  position: absolute;
   align-items: center;
   justify-content: center;
   right: 84%;
@@ -463,40 +439,28 @@ padding: 10px;
   height: 50px;
   border-radius: 50%;
   left: 15px;
- 
-
 }
-
-
-
-.emailUser{
+.emailUser {
   display: flex;
   position: absolute;
   left: 75px;
   font-family: IBMPlexSans-Medium;
-  font-size:medium;
+  font-size: medium;
   font-weight: bolder;
-
-  
-  
-  
 }
 
-.nameUserAuthGmail{
+.nameUserAuthGmail {
   display: flex;
   position: absolute;
   left: 75px;
   font-family: IBMPlexSans-Medium;
-  font-size:medium;
+  font-size: medium;
   font-weight: bolder;
-
-  
 }
 
-
-.photoUserAuthNull{
-  display:flex;
-  position:absolute;
+.photoUserAuthNull {
+  display: flex;
+  position: absolute;
   align-items: center;
   justify-content: center;
   right: 84%;
@@ -504,76 +468,88 @@ padding: 10px;
   height: 48px;
   border-radius: 50%;
   left: 15px;
-  
- 
-
-
 }
 
-.editPostButton{
+.editPostButton {
   display: flex;
-  position:absolute;
-  cursor:pointer;
+  position: absolute;
+  cursor: pointer;
   align-items: center;
   justify-content: center;
   left: 18.5rem;
 }
 
 .deletePostButton {
-    cursor:pointer;
-    display:flex;
-    position:absolute;
-    align-items: center;
-    justify-content: center;
-    left: 20rem;
-  }
-
-  /* MODAL */
-  .dialogModal{
-    font-family: IBMPlexSans-Medium;
-    font-size: 100%;
-    text-align: center;
-    position:absolute;
-    margin-top: 70%;
-    left: 5%;
-   width: 90%;
-   height: 21%;
-   border-radius: 8px;
-   border: none;
-   padding: 1.5em 1em 1em 1em;
-   background-color: #fafafa;
-   
-   
-  }
-
-  dialog::backdrop{
-    background-color:#1413137a;
-   
+  cursor: pointer;
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  left: 20rem;
 }
 
-.divModal{
- margin:0%; 
- 
- 
+.contenedorButtonsEditar {
+  display: flex;
+  gap: 7px;
+  position: relative;
+  left: 12rem;
+  margin-top: 4px;
 }
-.questionDelete{
-  
-   display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 0.7em;
-    margin: 0.7em 0;
-    background-color: #fbe9e7;
-    color: #333333;
-    
-    
-    
-
+.cancelarPostButton {
+  background-color: #d32f2fe0;
+  font-family: IBMPlexSans-Medium;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  letter-spacing: 1px;
+  color: #ffffff;
+}
+.guardarPostButton {
+  background-color: rgb(111, 216, 97);
+  font-family: IBMPlexSans-Medium;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  letter-spacing: 1px;
+  color: #ffffff;
 }
 
-.cancelDelete{
-  margin:5px;
+/* MODAL */
+.dialogModal {
+  font-family: IBMPlexSans-Medium;
+  font-size: 100%;
+  text-align: center;
+  position: absolute;
+  margin-top: 70%;
+  left: 5%;
+  width: 90%;
+  height: 21%;
+  border-radius: 8px;
+  border: none;
+  padding: 1.5em 1em 1em 1em;
+  background-color: #fafafa;
+}
+
+dialog::backdrop {
+  background-color: #1413137a;
+}
+
+.divModal {
+  margin: 0%;
+}
+.questionDelete {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 0.7em;
+  margin: 0.7em 0;
+  background-color: #fbe9e7;
+  color: #333333;
+}
+
+.cancelDelete {
+  margin: 5px;
   width: 110px;
   height: 35px;
   border-radius: 20px;
@@ -584,12 +560,12 @@ padding: 10px;
   font-size: 16px;
   background-color: #f1efef;
   font-family: IBMPlexSans-Medium;
-  letter-spacing:1px;
+  letter-spacing: 1px;
   font-weight: bold;
 }
 
-.finallyDelete{
-  margin:5px;
+.finallyDelete {
+  margin: 5px;
   width: 110px;
   height: 35px;
   border-radius: 20px;
@@ -600,35 +576,22 @@ padding: 10px;
   font-size: 16px;
   background-color: #d32f2f;
   font-family: IBMPlexSans-Medium;
-  letter-spacing:1px;
+  letter-spacing: 1px;
   font-weight: bold;
 }
 
-.divProfile{
-  display:flex;
+.divProfile {
+  display: flex;
   align-items: center;
   justify-content: center;
   background-color: #ce7f46be;
   width: 100%;
   height: 90px;
   border-radius: 9px 9px 0px 0px;
-  
 }
 
-.imageProfileUser{
-   position:absolute;
-  margin-top: 2px;
-  left: 37%;
-  right: 84%;
-  width: 48px;
-  height: 48px;
-  border-radius: 20%;
-  left: 17px;
- 
-}
-
-.imageUserLoginHeader{
-  position:absolute;
+.imageProfileUser {
+  position: absolute;
   margin-top: 2px;
   left: 37%;
   right: 84%;
@@ -638,25 +601,31 @@ padding: 10px;
   left: 17px;
 }
 
-.nameUserLoginHeader{
+.imageUserLoginHeader {
+  position: absolute;
+  margin-top: 2px;
+  left: 37%;
+  right: 84%;
+  width: 48px;
+  height: 48px;
+  border-radius: 20%;
+  left: 17px;
+}
+
+.nameUserLoginHeader {
   display: flex;
   position: absolute;
   left: 78px;
   font-family: IBMPlexSans-Medium;
-  font-size:medium;
+  font-size: medium;
   font-weight: bolder;
-
-  
 }
 
-.emailUserLoginHeaderRegister{
-  
+.emailUserLoginHeaderRegister {
   display: flex;
   position: absolute;
   left: 78px;
   font-family: IBMPlexSans-Medium;
-  font-size:medium;
+  font-size: medium;
   font-weight: bolder;
-  
 }
-
